# gesso

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  gesso.1
crates/gesso/: Cargo.toml
crates/gesso-core/: Cargo.toml
crates/gesso-core/src/: hex.rs  lib.rs  mem.rs  paths.rs
crates/gesso-core/src/decode/: gif.rs  jpeg.rs  mod.rs  png.rs  webp.rs
crates/gesso-core/src/model/: colour.rs  mod.rs  output.rs  request.rs  state.rs
crates/gesso-core/src/render/: engine.rs  mod.rs  scale.rs  surface.rs  transition.rs
crates/gesso-ipc/: Cargo.toml
crates/gesso-ipc/src/: client.rs  frame.rs  lib.rs  protocol.rs  server.rs
crates/gesso-wl/: Cargo.toml
crates/gesso-wl/src/: backend.rs  error.rs  health.rs  layer.rs  lib.rs  outputs.rs  present.rs  shm.rs  state.rs
crates/gesso/src/: cli.rs  defaults.rs  format.rs  main.rs  parse.rs
crates/gessod/: Cargo.toml
crates/gessod/src/: daemon_test.rs  logging.rs  main.rs
crates/gessod/src/daemon/: gif_player.rs  instance_lock.rs  ipc.rs  mod.rs  persist.rs  restore.rs  run.rs  snapshot.rs  transitions.rs  types.rs  wayland.rs
src/: cli.rs  daemon.rs  lib.rs  logrotate.rs  path.rs  protocol.rs  spec.rs
src/daemon/: client.rs  engine.rs  lock.rs  logging.rs  mod.rs  run.rs  session.rs  state.rs  utils.rs
src/wallpaper/: animations.rs  cache.rs  colour.rs  image.rs  mod.rs  paint.rs  render.rs  util.rs  wayland.rs
