[package]
name = "gesso"
version = "0.3.0"
edition = "2024"
description = "Deterministic Wayland wallpaper daemon/controller"
license = "MIT"
repository = "https://github.com/saltnpepper97/gesso"
readme = "README.md"
keywords = ["wayland", "wallpaper", "daemon", "wlroots", "layer-shell"]
categories = ["command-line-utilities", "graphics", "os::linux-apis"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
dirs = "6.0.0"
eventline = "0.6.1"
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg"] }
libc = "0.2.182"
memmap2 = "0.9.10"
tempfile = "3.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
wayland-client = "0.31.12"
wayland-protocols = "0.32.10"
wayland-protocols-wlr = { version = "0.3.10", features = ["client"] }
zbus = "5.13.2"
zvariant = "5.9.2"
