[package]
name = "gesso-core"
version = "0.4.0"
edition = "2024"

[dependencies]
rayon = "1.11.0"
rustix = { version = "1.1.4", features = ["mm", "param"] }
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }

png = "0.18.1"
jpeg-decoder = "0.3.2"
gif = "0.14.1"
webp = "0.3.1"
